# StorageServiceProject

./: .gitignore  LICENSE.TXT  README.MD  pyproject.toml
storageservice/: awsmysql.cfg  awsmysqllib.py  awsmysqllip.py
tests/: logging_storageservice.cfg  test_aws_db_connection.py
